# vlm_ws

./: .dockerignore  .env.example  .gitignore  DOCKER-FIXES.md  Dockerfile  Makefile  README-Docker.md  buildkitd.toml  docker-compose.yml  migrate-docker-setup.sh  run_odom_test.sh  start_two_docker_pannel.sh  start_vlm.sh  start_vlm_text_pub.sh  test_odom_real.py  test_odom_synthetic.py
.devcontainer/: Dockerfile copy.develop_vlm  Dockerfile.deploy_vlm  Dockerfile.deploy_vlm_amd64  Dockerfile.deploy_vlm_arm64  Dockerfile.develop_vlm  compose.multi-arch.yml  compose.yml  devcontainer.json  justfile  sources.list  sources_amd64.list  sources_arm64.list
.docker-setup-backup-20250620-202024/: Dockerfile.deploy_vlm_arm64  Dockerfile.develop_vlm  README-multiarch.md  build-multiarch.sh  justfile
.github/: copilot-instructions.md
.roo/rules/: best_practice.md  rules.md  sensors.md
src/anaya_server/: server.py
src/control_flow/: README_ASR_Protection.md  README_RL_State_Management.md  package.xml  setup.cfg  setup.py  test_multi_control.py
src/health_monitor/: README.md  package.xml  setup.py
src/health_monitor/config/: health_monitor.yaml
src/health_monitor/health_monitor/: monitor_node.py
src/health_monitor/launch/: monitor.launch.py
src/uwb_location/: CMakeLists.txt  package.xml
src/vita_agent/: QUICK_USAGE.md  demo_asr_processor.py  package.xml  pytest.ini  requirements.txt  setup.cfg  setup.py  start.sh  test_asr_integration.py  test_plan.md  test_straight_line_planning.py
src/vita_tools/: README_forward_asr.md  package.xml  setup.cfg  setup.py
(+47 files in other folders)
